[gd_scene load_steps=5 format=2]

[ext_resource path="res://EndlessGame/gameMain.gd" type="Script" id=1]
[ext_resource path="res://EndlessGame/LostGUI/lostGUIMain.tscn" type="PackedScene" id=2]
[ext_resource path="res://EndlessGame/InGameGUI/inGameGUIEndless.tscn" type="PackedScene" id=3]
[ext_resource path="res://EndlessGame/StageLabel/stageLabel.tscn" type="PackedScene" id=4]

[node name="gameMain" type="Node"]
script = ExtResource( 1 )

[node name="inGameGUICanvasLayer" parent="." instance=ExtResource( 3 )]

[node name="lostGUICanvasLayer" parent="." instance=ExtResource( 2 )]

[node name="stageLabelCanvasLayer" parent="." instance=ExtResource( 4 )]
